--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -20,10 +20,15 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.9
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser
-          pip install -e .[documentation]
+          pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+          pip install -e .
       - name: Sphinx build
         run: |
           sphinx-quickstart
