--- a/pytest.ini
+++ b/pytest.ini
@@ -11,7 +11,7 @@ flake8-max-line-length = 120
 
 # Ignore module level import not at top of file (E402)
 # Others can be found in https://flake8.pycqa.org/en/latest/user/error-codes.html
-flake8-ignore = E402 F401 F403 E126 W504 W503 E501
+flake8-ignore = E402 F401 F403 E126 W504 W503 E501 W293
 
 # --doctest-modules is used for unitest
 addopts = --doctest-modules --cov --cov-report=term-missing --flake8
